I built this page using Dark Mode. So everything is Light - Fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 body {
-   
+    background-color: #010000;
     color: #bccfe8;
     font-family: arial;
     max-width: 2080px;
